chore: Update gitignore to exclude temporary, log, parameter, raw, and model files.

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,16 @@ logs/
 # Recordings
 recordings/
 
+*.out
+*.log
+*.bin
+*.raw
+*.parm
+
 # Models (large files)
 models/*.engine
+models/*.trt
+models/*.pt
 models/*.onnx
 models/*.hef
 models/*.bin
